CopysToWorkOn/style copy.css
* {
    margin: 0px;
    padding: 0;
    box-sizing: border-box;
    font-family: sans-serif;
}

.nav-links {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #454545;
}

.nav-links li {
    float: left;
}

.nav-links li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

.nav-links li a:hover {
    background-color: #111;
}

body {
    display: flex;
    flex-direction: column;
    margin: 22px;
}

h1 {
    margin-bottom: 25px;
    color: #005A9C;
}

.group {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin-top: 50px;
}

.card {
    position: relative;
    width: 600px; 
    height: 600px;
    perspective: 1000px;
    margin-bottom: 20px; 
    margin-right: 50px; 
}

.card-inner {
    position: absolute;
    width: 100%;
    height: 100%;
    transition: transform 0.8s;
    transform-style: preserve-3d;
}

.card:hover .card-inner {
    transform: rotateY(-180deg);
}

.card-front, .card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    backface-visibility: hidden;
    background: #91b9ed;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 20px;
}

.card-back {
    background: #f0c465;
    transform: rotateY(180deg);
}

